created pip-installable package, modified funcs for creating audio dataset and embeddings to incorporate speaker identification, and added funcs to calculate similarity across speakers

--- a/scripts/load_dataset.ipynb
+++ b/scripts/load_dataset.ipynb
@@ -22,9 +22,7 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"../\")\n",
-    "from src.preprocessing import load_audio_dataset, upload_to_huggingface"
+    "from src.preprocessing import create_audio_dataset, upload_to_huggingface"
    ]
   },
   {
@@ -55,7 +53,7 @@
     }
    ],
    "source": [
-    "audio_dataset = load_audio_dataset(raw_data_path, transcript_path_pattern)"
+    "audio_dataset = create_audio_dataset(raw_data_path, transcript_path_pattern)"
    ]
   },
   {
