add: funcs to calc eer and wer. began voice conversion (need to replace TTS for freeVC or other alternative)

--- a/scripts/load_embeddings.ipynb
+++ b/scripts/load_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,13 +18,13 @@
     "from datasets import load_dataset, load_from_disk\n",
     "from src.utils import CODEBASE_DIR\n",
     "from src.preprocessing import create_audio_dataset\n",
-    "from src.speaker_verification import compute_similarity_score, compute_pairwise_similarity\n",
+    "from src.speaker_verification import *\n",
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "})"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
        "dict_keys(['audio', 'transcript', 'speaker_id', 'embeddings'])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "torch.Size([192])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "1.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "0.10053510963916779"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "})"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        " 'similarity_score': 0.10053510963916779}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,18 +564,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'high_similarity_different_speakers=0, low_similarity_same_speakers=83'"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "high_similarity_different_speakers=0, low_similarity_same_speakers=83\n"
+     ]
     }
    ],
    "source": [
@@ -589,6 +586,43 @@
     "    if item['similarity_score'] < threshold and item['speaker_id1']==item['speaker_id2']:\n",
     "        low_similarity_same_speakers += 1\n",
     "print(f\"{high_similarity_different_speakers=}, {low_similarity_same_speakers=}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4950/4950 [00:03<00:00, 1395.01it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.056532686576247215, 0.24691295623779297)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eer, threshold = calculate_eer(similarities)\n",
+    "eer, threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# wer = calculate_wer(dataset_with_embeddings, predictions) # run ASR model to get predictions"
    ]
   }
  ],
