--- a/scripts/load_dataset.ipynb
+++ b/scripts/load_dataset.ipynb
@@ -106,14 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=100\n",
+    "audio_dataset = audio_dataset.shuffle(seed=42) # shuffle to get random samples\n",
+    "audio_dataset = audio_dataset.select(range(n)) # small dataset for testing"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,25 +132,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 1912/1912 [00:13<00:00, 143.54 examples/s]/s]\n",
-      "Creating parquet from Arrow format: 100%|██████████| 20/20 [00:02<00:00,  9.87ba/s]\n",
-      "Uploading the dataset shards:  33%|███▎      | 1/3 [17:24<34:48, 1044.04s/it]"
+      "Map: 100%|██████████| 100/100 [00:00<00:00, 282.64 examples/s]it/s]\n",
+      "Creating parquet from Arrow format: 100%|██████████| 1/1 [00:00<00:00, 15.13ba/s]\n",
+      "Uploading the dataset shards: 100%|██████████| 1/1 [00:34<00:00, 34.11s/it]\n"
      ]
     },
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset uploaded to Hugging Face as azain/LibriTTS-100-samples.\n"
      ]
     }
    ],
    "source": [
-    "upload_to_huggingface(audio_dataset, 'azain/LibriTTS-raw')"
+    "upload_to_huggingface(audio_dataset, f'azain/LibriTTS-{n}-samples')"
    ]
   }
  ],
